# zmq-pub-sub

./: Readme.md  docker-compose.yml
publisher/: CMakeLists.txt  Dockerfile  publisher.cpp
subscriber/: Dockerfile  msg.proto  subscriber.py
